--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>hackhub.me</groupId>
-    <artifactId>learn-java</artifactId>
+    <artifactId>leetcode-magic</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>modules</module>
-        <module>modules/leetcode</module>
-    </modules>
+    <version>0.0.1</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
